<resources>
    <string name="app_name">eatxpiry</string>
    <string name="sign_up">Sign Up</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_here"><u>Login Here</u></string>
    <string name="login">Login</string>
    <string name="sign_up_here"><u>Sign up here</u></string>
    <string name="hello">Hello</string>
    <string name="Admin">Admin</string>
    <string name="search_elements">Search</string>
    <string name="inventory">Inventory</string>
    <string name="scan">Scan</string>
    <string name="calendar_view">Calendar View</string>
    <string name="members">Profile</string>
    <string name="items_due">ITEMS DUE: 3 DAYS</string>
    <string name="itemdue_text"><strong>Item: </strong>Bread\n<strong>Location: </strong>Cabinet</string>
    <string name="home">Home</string>
    <string name="faq">FAQ</string>
    <string name="profile">Profile</string>
    <string name="Header"><h1>Everything You Should Know</h1></string>
    <string name="Q1"><strong>Q: What is the main objective of this mobile application</strong></string>
    <string name="A1"><strong>A:</strong> The main objectives of Eatxpiry are: >To establish a mobile application with Optical Character Recognition (OCR) technology and image recognition technology for household consumers to keep track of food expiration dateTo accommodate an alternative for consumers to maintain quality food supplies at home to ensure safe food consumption through home inventory system accessible via smartphone.  To guide and assist household consumers in reducing food waste originated from items nearly reaching expiry date with the assistance of timely reminders. </string>
    <string name="Q2"><strong>Q: Where to contact the problems encounter?</strong></string>
    <string name="A2"><strong>A:</strong> You may contact us through this <u><a href = "ambrosiatech@gmail.com"> email</a></u>. It is required to attach a screenshot of the problems encountered in order for us to provide smoother experience.</string>
</resources>