<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".faq_fragment">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5c913b">

        <LinearLayout
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Frequently Asked Questions"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/topbar"
            android:background="@color/white"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/topbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@mipmap/ic_launcher_round"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:id="@+id/idImageFAQ"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Header"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/idImageFAQ"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/idTVFirst"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1"
                android:layout_below="@+id/idTVFirst"
                android:layout_marginTop="20dp"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:id="@+id/idTVSecond"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A1"
                android:layout_below="@+id/idTVSecond"
                android:layout_marginTop="15dp"
                android:textSize="18dp"
                android:textColor="@color/grey"
                android:id="@+id/idTVThird"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2"
                android:layout_below="@+id/idTVThird"
                android:layout_marginTop="20dp"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:id="@+id/idTVFour"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A2"
                android:layout_below="@+id/idTVFour"
                android:textColor="@color/grey"
                android:layout_marginTop="15dp"
                android:textSize="18dp"
                android:id="@+id/idTVFive"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>